--- a/nael/nael/nael.csproj
+++ b/nael/nael/nael.csproj
@@ -9,7 +9,7 @@
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <OutputPath>$(AppData)\XIVLauncher\devPlugins\NaelPlugin\</OutputPath>
         <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
-        <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <AssemblyVersion>1.1.0.0</AssemblyVersion>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <PackageProjectUrl>https://github.com/Eisenhuth/dalamud-nael</PackageProjectUrl>
         <Description>Dalamud Plugin that translates Nael's quotes</Description>
@@ -41,6 +41,10 @@
     <ItemGroup>
         <Reference Include="Dalamud">
             <HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\Dalamud.dll</HintPath>
+            <Private>false</Private>
+        </Reference>
+        <Reference Include="ImGui">
+            <HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\ImGui.NET.dll</HintPath>
             <Private>false</Private>
         </Reference>
     </ItemGroup>
